--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
+    "json": "^11.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "server": "^1.0.39",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
